# jellyfin-strm

./: .dockerignore  .gitignore  Dockerfile  Jellyfin.Plugin.StrmSync.sln  README.md  build.yaml  config.example.yaml  docker-compose.nas.example.yml  manifest.json  pyproject.toml
.github/workflows/: build-and-push-ghcr.yml  build.yaml  pages.yaml  publish.yaml  test.yaml
Jellyfin.Plugin.StrmSync/: Jellyfin.Plugin.StrmSync.csproj  Plugin.cs
Jellyfin.Plugin.StrmSync/Configuration/: PluginConfiguration.cs  configPage.html
Jellyfin.Plugin.StrmSync/ScheduledTasks/: StrmSyncTask.cs
Jellyfin.Plugin.StrmSync/Services/: FileWatcherService.cs
Jellyfin.Plugin.StrmSync/StrmSync/: LibraryRefresher.cs  StrmGenerator.cs
docs/superpowers/plans/: 2026-03-24-115-strm-sync-implementation.md
docs/superpowers/specs/: 2026-03-24-nas-115-jellyfin-strm-design.md
pages/: manifest.json
src/jellyfin_strm/: __init__.py  __main__.py  cli.py  config.py  executor.py  jellyfin.py  planner.py  rules.py  runtime.py  watch.py
src/jellyfin_strm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_jellyfin.py  test_packaging.py  test_planner.py  test_rules.py  test_watch.py
